fix: Center form on mobile display

--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ form {
   display: none;
   position: absolute;
   top: calc((100vh - 340px) / 2);
-  left: max(15px, calc((100vw - 320px) / 2));
+  left: max(15px, calc((100vw - 340px) / 2));
   max-width: 90vw;
   z-index: 1;
 }
